--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,114 @@
+@font-face {
+  font-family: Minecraft Ten;
+  src: url('./fonts/MinecraftTen-VGORe.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: Minecraftia;
+  src: url('./fonts/Minecraftia-Regular.ttf') format('truetype');
+}
+
+body {
+  background-color:rgb(250, 249, 215);
+}
+
+* {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+
+ overflow: hidden;
+}
+
+input {
+  -webkit-touch-callout: unset; /* iOS Safari */
+    -webkit-user-select: unset; /* Safari */
+     -khtml-user-select: unset; /* Konqueror HTML */
+       -moz-user-select: unset; /* Old versions of Firefox */
+        -ms-user-select: unset; /* Internet Explorer/Edge */
+            user-select: unset; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+}
+
+h1 {
+  margin: auto;
+  font-size: 10vh;
+  letter-spacing: 1.5vw;
+  font-family: "Minecraft Ten";
+}
+
+button {
+  background-color: rgb(255, 238, 0);
+  border: 0.5vh solid black;
+  font-size: 1.3vw;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+input {
+  border: 0.3vh solid black;
+  outline: none;
+  padding-left: 0.5vh;
+}
+
 .App {
   text-align: center;
+  width: auto;
+  margin-left: 5vw;
+  margin-top: 2vh;
+
+  display: grid;
+  grid-template-rows: 13vh 75vh 8vh;
+  grid-template-columns: 30vw 60vw;
+  grid-column-gap: 2vw;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+  grid-row: 1/2;
+  grid-column: 1/3;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.leftDiv {
+  grid-row: 2/3;
+  grid-column: 1/2;
+
+  border-color: black;
+  border-style: solid;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.rightDiv {
+  grid-row: 2/3;
+  grid-column: 2/3;
+
+  border-color: black;
+  border-style: solid;
+}
+
+.footer {
+  grid-row: 3/4;
+  grid-column: 1/3;
+
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.footer div {
+  margin: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.playerImg {
+  max-width:100%;
+  max-height:100%;
+
+  min-width:100%;
+  min-height:100%;
+
+  font-size: xx-small;
+  overflow: hidden;
 }
